# t4-s3_base-apps

./: .gitmodules  CMakeLists.txt  README.md  sdkconfig.defaults
components/ui_apps/: CMakeLists.txt  MAZE_PATTERN_STRATEGY.md
components/ui_apps/include/: ui_launcher.h  ui_maze.h  ui_sports.h  ui_weather.h
components/ui_apps/src/: ui_board_settings.c  ui_launcher.c  ui_maze.c  ui_sports.c  ui_weather.c
main/: main.c
tools/: README.md  idfsh.sh
